--- a/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
@@ -121,7 +121,8 @@
             margin: -3px auto 0;
             border-right: 1px solid $white;
             border-bottom: 1px solid $white;
-            transform: rotate(45deg);
+            transform: rotate(-45deg);
+            transition: all .2s ease-out;
         }
     }
     .has-subNav {
@@ -135,6 +136,11 @@
     .is-open {
         & > a {
             border-bottom-color: $sky;
+        }
+        .siteNavigation-subNavToggle {
+            &:before {
+                transform: rotate(45deg);
+            }
         }
     }
 }
