--- a/static-html/dev-html/partials/section-landing.html
+++ b/static-html/dev-html/partials/section-landing.html
@@ -25,7 +25,7 @@
             <div class="medium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/400x400 768w">
+                        <img src="http://placehold.it/480x480" alt="" srcset="http://placehold.it/480x480 480w, http://placehold.it/300x300 480w">
                     </div>
                     <div class="promoList-item-body">
                         <h3>EXPLORE ART VENUES</h3>
@@ -42,7 +42,7 @@
             <div class="medium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/400x400 768w">
+                        <img src="http://placehold.it/480x480" alt="" srcset="http://placehold.it/480x480 480w, http://placehold.it/300x300 480w">
                     </div>
                     <div class="promoList-item-body">
                         <h3>EXPLORE ART VENUES</h3>
@@ -59,7 +59,7 @@
             <div class="medium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/400x400 768w">
+                        <img src="http://placehold.it/480x480" alt="" srcset="http://placehold.it/480x480 480w, http://placehold.it/300x300 480w">
                     </div>
                     <div class="promoList-item-body">
                         <h3>EXPLORE ART VENUES</h3>
@@ -76,7 +76,7 @@
             <div class="medium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
-                        <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/400x400 768w">
+                        <img src="http://placehold.it/480x480" alt="" srcset="http://placehold.it/480x480 480w, http://placehold.it/300x300 480w">
                     </div>
                     <div class="promoList-item-body">
                         <h3>EXPLORE ART VENUES</h3>
@@ -92,7 +92,7 @@
             <!--   promoList-item  -->
         </section>
 
-        <section class="u-fullSection u-aquaGradient promoSpace">
+        <section class="promoSpace u-fullSection u-aquaGradient">
 
             <div class="promoSpace-inner">
                 <h1>Are You An Artist?</h1>
