--- a/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
@@ -1,83 +1,126 @@
 .promoList {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
+    margin-left: 0;
+    margin-right: 0;
+    @include breakpoint(medium) {
+        margin-left: -.9375rem;
+        margin-right: -.9375rem;
+    }
+    .column,
+    .columns {
+        padding: 0;
+        @include breakpoint(medium) {
+            padding-left: .9375rem;
+            padding-right: .9375rem;
+        }
+    }
+    .medium-6 {
+        @include breakpoint(halfMedium) {
+            width: 50%;
+        }
+    }
 }
 .promoList-item {
-  position: relative;
-  margin-bottom: 30px;
-  overflow: hidden;
+    position: relative;
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+.promoList-item-image {
+    img {
+        width: 100%;
+    }
 }
 .promoList-item-body {
-  position: absolute;
-  top: 15%;
-  left: 0;
-  z-index: 100;
-  width: 100%;
-  //height: 100%;
-  padding: 0 15px;
-  &:before {
-    position: relative;
-    z-index: 101;
-    display: block;
-    width: 24px;
-    height: 24px;
-    content: '';
-    margin-bottom: 10px;
-    background: $white;
-  }
-  h3 {
-    position: relative;
-    z-index: 101;
-    margin-bottom: 20px;
-    color: $white;
-  }
-  p {
-    position: relative;
-    z-index: 101;
-    margin-bottom: 0;
-    height: 0;
-    max-width: 50%;
-    visibility: hidden;
-    opacity: 0;
-    transition: all .2s ease-out;
-    color: $white;
-  }
+    position: absolute;
+    top: 20px;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    padding: 0 15px;
+    @include breakpoint(large) {
+        top: 15%;
+    }
+    &:before {
+        position: relative;
+        z-index: 101;
+        display: block;
+        width: 24px;
+        height: 24px;
+        content: "";
+        margin-bottom: 10px;
+        background: $white;
+    }
+    h3 {
+        position: relative;
+        z-index: 101;
+        margin-bottom: 10px;
+        font-size: 1rem;
+        color: $white;
+        @include breakpoint(large) {
+            margin-bottom: 20px;
+            font-size: 1.2rem;
+        }
+    }
+    p {
+        position: relative;
+        z-index: 101;
+        margin-bottom: 0;
+        transition: all .2s ease-out;
+        color: $white;
+        @include breakpoint(large) {
+            height: 0;
+            max-width: 50%;
+            visibility: hidden;
+            opacity: 0;
+        }
+    }
 }
 .promoList-item-categoryDecor {
-  position: absolute;
-  left: 0;
-  top: -10px;
-  bottom: 10px;
-  z-index: 100;
-  width: 100%;
-  opacity: 0.75;
-  transition: all .2s ease-out;
+    position: absolute;
+    left: 0;
+    top: -510px;
+    bottom: -510px;
+    z-index: 100;
+    width: 100%;
+    opacity: 0.75;
+    transition: all .2s ease-out;
+    @include breakpoint(large) {
+        top: -10px;
+        bottom: 10px;
+    }
 }
 .promoList-item-button {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-  z-index: 102;
-  opacity: 0;
-  transition: all .2s ease-out;
-  .btn {
-    width: 194px;
-  }
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 102;
+    transition: all .2s ease-out;
+    @include breakpoint(large) {
+        bottom: 30px;
+        right: 30px;
+        opacity: 0;
+    }
+    .btn {
+        min-width: 194px;
+    }
 }
 .promoList-item {
-  &:hover {
-    .promoList-item-categoryDecor {
-      top: -200px;
-      bottom: -200px;
+    &:hover {
+        .promoList-item-categoryDecor {
+            @include breakpoint(large) {
+                top: -200px;
+                bottom: -200px;
+            }
+        }
+        .promoList-item-body {
+            p {
+                height: auto;
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        .promoList-item-button {
+            opacity: 1;
+        }
     }
-    .promoList-item-body {
-      p {
-        height: auto;
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-    .promoList-item-button {
-      opacity: 1;
-    }
-  }
 }
