--- a/static-html/dev-html/partials/section-landing.html
+++ b/static-html/dev-html/partials/section-landing.html
@@ -21,8 +21,8 @@
         </section>
 
         <!--    Sub page Promo  -->
-        <section class="row promoList">
-            <div class="medium-6 column">
+        <section class="row halfMedium-collapse medium-uncollapse promoList">
+            <div class="halfMedium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -39,7 +39,7 @@
                 <!--   / promoList-item  -->
             </div>
             <!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -56,7 +56,7 @@
                 <!--   / promoList-item  -->
             </div>
             <!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
@@ -73,7 +73,7 @@
                 <!--   / promoList-item  -->
             </div>
             <!--   promoList-item  -->
-            <div class="medium-6 column">
+            <div class="halfMedium-6 column">
                 <div class="promoList-item">
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
