--- a/static-html/scss/_global.scss
+++ b/static-html/scss/_global.scss
@@ -90,6 +90,19 @@ ol {
     padding: 5px 0;
     border-bottom: 3px solid $black;
 }
+.postPage-backLink {
+    margin-bottom: 40px;
+    a {
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+.postPage-content--bottomLine {
+    padding-bottom: 30px;
+    border-bottom: 2px solid $gray-border;
+}
 #svgPlaceholder {
     display: none;
 }
