--- a/wp-content/themes/w4ptheme/scss/application.scss
+++ b/wp-content/themes/w4ptheme/scss/application.scss
@@ -14,6 +14,7 @@
 @import 'partials/off-canvas';
 @import 'partials/post-list';
 @import 'partials/post-page-navigation';
+@import 'partials/sidebar-gallery';
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
