--- a/wp-content/themes/w4ptheme/scss/partials/_layout.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_layout.scss
@@ -38,3 +38,19 @@
 .siteContent > .row {
     margin-bottom: 48px;
 }
+.relatedContent {
+    margin-top: -50px;
+    padding: 0 10px 50px;
+    @include breakpoint(medium) {
+        margin-top: -100px;
+        padding: 0 15px 90px;
+    }
+}
+.relatedContent--hasSidebar {
+    @include breakpoint(medium) {
+        padding-right: 8%;
+    }
+    @include breakpoint(large) {
+        padding-right: 10%;
+    }
+}
