--- a/static-html/dev-html/partials/venue-list-template.html
+++ b/static-html/dev-html/partials/venue-list-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Arts Calendar</h1>
+                <h1 class="postPage-title u-text--center">Venue Calendar</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -100,9 +100,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -113,9 +113,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -126,9 +126,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -139,9 +139,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -152,9 +152,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -165,9 +165,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -178,9 +178,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -191,9 +191,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -204,9 +204,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -217,9 +217,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -230,9 +230,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -243,9 +243,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
@@ -256,9 +256,9 @@
             <a href="#" class="js-touchFocus">
                 <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                 <div class="gridItem-info">
-                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                    <p class="u-text--upper"><i>Medium | Genre</i></p>
-                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                    <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                    <p class="u-text--upper"><i>Community</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                 </div>
             </a>
         </div>
