--- a/wp-content/themes/w4ptheme/scss/partials/_forms.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_forms.scss
@@ -13,6 +13,10 @@ textarea {
     &::placeholder {
         font-style: italic;
     }
+    &.is-datepicker {
+        background: url("../images/calendar.svg") no-repeat 95% 8px;
+        background-size: 14px 24px;
+    }
 }
 textarea {
     resize: vertical;
@@ -164,17 +168,4 @@ label {
 .form-row {
     position: relative;
     margin-bottom: 15px;
-
-    &.is-datepicker {
-        &:after {
-            content: $fa-var-calendar;
-            position: absolute;
-            top: 8px;
-            right: 12px;
-            font-family:  FontAwesome;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-    }
 }
